--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <!-- SECCIÓ 1 -->
   <section>
-    <h2>1) Evolució global — electricitat i cuina neta</h2>
+    <h2>Evolució global — accés a l'electricitat i els combustibles nets</h2>
     <p class="lead">
       Aquesta visualització mostra l’evolució anual dels dos indicadors principals de l’ODS 7 a nivell mundial.
       Permet observar el progrés agregat i la diferència de ritme entre electricitat i combustibles nets per cuinar.
@@ -85,7 +85,7 @@
 
   <!-- SECCIÓ 2 -->
   <section>
-    <h2>2) Què vol dir en població? — auditori i índex ODS 7</h2>
+    <h2>Què vol dir en població?</h2>
     <p class="lead">
       Per traduir percentatges a un missatge més intuïtiu, es construeix un <b>índex combinat</b>:
       <b>ODS7_index = (electricitat + cuina neta)/2</b>.
@@ -93,7 +93,7 @@
     </p>
     <div class="frame">
       <iframe class="h-auditori" src="visuals/seccio2_auditori_mundial.html" loading="lazy"
-              title="Secció 2 — Auditori i índex ODS7"></iframe>
+              title="Secció 2 — Índex ODS7"></iframe>
     </div>
     <p class="note">
       Nota metodològica: l’índex dona el mateix pes a electricitat i cuina neta per reflectir que ambdues dimensions formen part de l’ODS 7.
@@ -102,9 +102,9 @@
 
   <!-- SECCIÓ 3 -->
   <section>
-    <h2>3) Desigualtats territorials — evolució de l’ODS7_index segons territoris</h2>
+    <h2>Les desigualtats territorials: evolució de l’Index ODS7 segons territoris</h2>
     <p class="lead">
-      El mapa permet analitzar com evoluciona l’ODS7_index per país al llarg del temps.
+      El mapa permet analitzar com evoluciona l’Index ODS7 per país al llarg del temps.
       És especialment útil per identificar concentracions territorials de dèficit i la persistència de desigualtats.
     </p>
     <div class="frame">
@@ -115,7 +115,7 @@
 
   <!-- SECCIÓ 4 -->
   <section>
-    <h2>4) On ens deixa això?</h2>
+    <h2>On ens deixa això?</h2>
     <p class="lead">
       A l’últim any de dades disponible, es classifiquen els països segons el seu grau d’assoliment de l’ODS 7.
       El resultat mostra que una part molt significativa de països continua lluny d’arribar al 100% d’accés,
@@ -124,6 +124,23 @@
     <div class="frame">
       <iframe class="h-donut" src="visuals/seccio4_paisos_lluny_ods7.html" loading="lazy"
               title="Secció 4 — Països lluny ODS7"></iframe>
+    </div>
+  </section>
+
+  <!-- SECCIÓ 5 -->
+  <section>
+    <h2>La relació entre el desenvolupament econòmic i el compliment de l’ODS 7</h2>
+    <p class="lead">
+      Finalment, es compara el grau de compliment de l’ODS 7 amb el nivell de desenvolupament econòmic dels països,
+      utilitzant el PIB per càpita com a indicador de referència.
+      La visualització mostra la densitat de països segons el seu
+      <b>Índex ODS 7</b> i el seu nivell de renda.</p>
+    <div class="frame">
+      <iframe class="h-scatter"
+              src="visuals/seccio5_ods7_vs_gdp_hexbin.html"
+              loading="lazy"
+              title="Secció 5 — Compliment de l’ODS 7 vs PIB per càpita">
+      </iframe>
     </div>
   </section>
 
