--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       --muted: #555;
       --border: #eaeaea;
       --bg: #fff;
+      --soft: #fafafa;
     }
     body{
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
@@ -19,127 +20,268 @@
     .wrap{max-width:var(--maxw); margin:0 auto; padding:22px 16px 60px;}
     header{padding:14px 0 6px;}
     h1{margin:0 0 8px; font-size:30px; line-height:1.2;}
-    .subtitle{margin:0 0 14px; color:var(--muted); font-size:16px; max-width:980px;}
-    .question{margin:0 0 18px; padding:12px 14px; border:1px solid var(--border); border-radius:12px; color:#222;}
-
-    section{margin:38px 0 48px;}
-    h2{margin:0 0 8px; font-size:20px;}
-    .lead{margin:0 0 10px; color:var(--muted); max-width:980px; line-height:1.45;}
-
-    .frame{
-      border:1px solid var(--border); border-radius:14px;
-      overflow:hidden; background:#fff;
+    .subtitle{margin:0 0 14px; color:var(--muted); font-size:16px; max-width:980px; line-height:1.55;}
+    .question{
+      margin:0 0 18px;
+      padding:12px 14px;
+      border:1px solid var(--border);
+      border-radius:12px;
+      color:#222;
+      background:var(--soft);
+      line-height:1.55;
     }
 
+    section{margin:38px 0 48px;}
+    h2{margin:0 0 6px; font-size:20px;}
+    .chart-subtitle{margin:0 0 10px; color:var(--muted); max-width:980px; line-height:1.45;}
+    .lead{margin:0 0 12px; color:var(--muted); max-width:980px; line-height:1.6;}
+
+    .narrative{
+      margin:14px 0 14px;
+      padding:12px 14px;
+      border:1px solid var(--border);
+      border-radius:12px;
+      background:#fff;
+    }
+    .narrative h3{
+      margin:0 0 6px;
+      font-size:14px;
+      letter-spacing:.2px;
+      text-transform: uppercase;
+      color:#333;
+    }
+    .narrative p{
+      margin:0 0 10px;
+      color:#222;
+      line-height:1.6;
+    }
+    .narrative p:last-child{margin-bottom:0;}
+    .insight{
+      padding:10px 12px;
+      border-left:4px solid #ddd;
+      background:var(--soft);
+      border-radius:10px;
+      margin-top:10px;
+      color:#222;
+      line-height:1.6;
+    }
+    .method{
+      font-size:13px;
+      color:var(--muted);
+      margin-top:10px;
+      line-height:1.5;
+    }
+    .kpi{
+      font-size:14px;
+      color:#222;
+      margin:8px 0 0;
+      line-height:1.6;
+    }
+    .kpi b{font-weight:700;}
+
+    .frame{
+      border:1px solid var(--border);
+      border-radius:14px;
+      overflow:hidden;
+      background:#fff;
+    }
     iframe{
       width:100%;
-      height:680px;
       border:0;
       display:block;
     }
 
-    /* Ajustos per tipus de visualització (opcional, però queda millor) */
+    /* Alçades per visualització */
     .h-linees{height:680px;}
-    .h-auditori{height:520px;}
+    .h-auditori{height:560px;}
     .h-mapa{height:720px;}
     .h-donut{height:560px;}
+    .h-scatter{height:640px;}
 
     footer{
       margin-top:40px; padding-top:16px;
-      border-top:1px solid var(--border); color:var(--muted); font-size:13px;
+      border-top:1px solid var(--border);
+      color:var(--muted);
+      font-size:13px;
       line-height:1.5;
     }
-    .note{font-size:13px; color:var(--muted); margin-top:8px;}
+    .note{font-size:13px; color:var(--muted); margin-top:10px; line-height:1.5;}
   </style>
 </head>
 
 <body>
-
 <main class="wrap">
 
   <header>
-    <h1>ODS 7 — Accés universal a l’energia: on som a 7 anys del 2030?</h1>
+    <h1>ODS 7 — Accés universal a una energia neta, fiable i sostenible: on som a 7 anys del 2030?</h1>
     <p class="subtitle">
-      L’ODS 7 estableix la fita d’assegurar energia assequible i no contaminant per a tothom abans del 2030.
-      Aquesta presentació integra quatre visualitzacions per entendre l’evolució global, les desigualtats territorials
-      i el repte real pendent.
+      L’ODS 7 fixa l’objectiu d’assegurar l’accés universal a serveis energètics assequibles, fiables i moderns abans del 2030.
+      Aquesta peça integra cinc visualitzacions per entendre el progrés global, les desigualtats territorials i el paper dels factors
+      econòmics en el grau d’assoliment actual.
     </p>
     <p class="question">
-      <b>Pregunta central:</b> Quin és el nivell d’assoliment actual de l’ODS 7 (electricitat i cuina neta) i quines diferències
-      territorials i estructurals expliquen el retard respecte a la fita 2030?
+      <b>Pregunta central:</b> Quin és el nivell d’assoliment actual de l’ODS 7 (accés a l’electricitat i a combustibles i tecnologies netes i segures per cuinar)
+      i quines diferències territorials i estructurals expliquen el retard respecte a la fita 2030?
     </p>
   </header>
 
   <!-- SECCIÓ 1 -->
   <section>
-    <h2>Evolució global — accés a l'electricitat i els combustibles nets</h2>
-    <p class="lead">
-      Aquesta visualització mostra l’evolució anual dels dos indicadors principals de l’ODS 7 a nivell mundial.
-      Permet observar el progrés agregat i la diferència de ritme entre electricitat i combustibles nets per cuinar.
+    <h2>Evolució global</h2>
+    <p class="chart-subtitle">
+      Accés mundial a l’electricitat i a combustibles i tecnologies netes i segures per cuinar (1998–2023)
     </p>
+    <p class="lead">
+      Comencem pel panorama agregat: la sèrie temporal permet comparar l’evolució dels dos indicadors i veure si el progrés avança
+      al ritme necessari per arribar al 100% el 2030.
+    </p>
+
+    <div class="narrative">
+      <h3>Lectura</h3>
+      <p>
+        L’accés a l’electricitat mostra una tendència clarament ascendent i s’acosta progressivament a la cobertura universal.
+        En canvi, l’accés a combustibles i tecnologies netes i segures per cuinar creix més lentament i es manté notablement per sota.
+      </p>
+      <p class="insight">
+        <b>Idea clau:</b> la bretxa entre electricitat i cuina amb solucions netes i segures indica que l’ODS 7 no es pot interpretar
+        com “quasi resolt” només perquè l’electrificació sigui elevada; el component de cuina segura i neta és el principal fre del progrés global.
+      </p>
+    </div>
+
     <div class="frame">
       <iframe class="h-linees" src="visuals/seccio1_ods7_animada.html" loading="lazy"
-              title="Secció 1 — Evolució global ODS7"></iframe>
+              title="Secció 1 — Evolució global ODS 7"></iframe>
     </div>
   </section>
 
   <!-- SECCIÓ 2 -->
   <section>
-    <h2>Què vol dir en població?</h2>
-    <p class="lead">
-      Per traduir percentatges a un missatge més intuïtiu, es construeix un <b>índex combinat</b>:
-      <b>ODS7_index = (electricitat + cuina neta)/2</b>.
-      El pictograma mostra la proporció de població mundial amb i sense accés “amb garanties”.
+    <h2>Què vol dir “accés universal” avui? (mostra de 100)</h2>
+    <p class="chart-subtitle">
+      Índex combinat ODS 7 sobre 100 icones: representació proporcional de l’accés “amb garanties” l’any 2023
     </p>
+    <p class="lead">
+      Per sintetitzar les dues dimensions en un únic indicador, es construeix un índex ad-hoc per a la pràctica:
+      <b>ODS7_index = (electricitat + combustibles/tecnologies netes i segures per cuinar)/2</b>.
+      El pictograma tradueix aquest percentatge en una imatge fàcil d’interpretar.
+    </p>
+
+    <div class="narrative">
+      <h3>Lectura</h3>
+      <p>
+        Aquesta visualització <b>no</b> mostra el nombre real de persones, sinó una <b>representació proporcional</b> en una mostra de
+        <b>100 icones</b> que simbolitzen la població mundial. En <b>groc</b> s’hi representa la proporció amb accés “amb garanties”
+        segons l’índex; en <b>negre</b>, la proporció sense accés garantit (la bretxa fins al 100%).
+      </p>
+      <p class="kpi">
+        <b>Any 2023:</b> Electricitat <b>91.6%</b> · Combustibles/tecnologies netes i segures per cuinar <b>74.1%</b> ·
+        <b>ODS7_index 82.9%</b> (≈ <b>83</b> de 100 icones amb accés “integral” segons la definició de l’índex).
+      </p>
+      <p class="insight">
+        <b>Idea clau:</b> l’índex fa visible que, fins i tot amb una electrificació alta, el dèficit en cuina amb solucions netes i segures
+        manté una bretxa rellevant respecte a l’objectiu d’accés universal.
+      </p>
+      <p class="method">
+        <b>Nota metodològica:</b> l’índex assigna el mateix pes a ambdues dimensions per reflectir que totes dues formen part del repte ODS 7.
+      </p>
+    </div>
+
     <div class="frame">
       <iframe class="h-auditori" src="visuals/seccio2_auditori_mundial.html" loading="lazy"
-              title="Secció 2 — Índex ODS7"></iframe>
+              title="Secció 2 — Pictograma índex ODS 7 (mostra de 100)"></iframe>
     </div>
-    <p class="note">
-      Nota metodològica: l’índex dona el mateix pes a electricitat i cuina neta per reflectir que ambdues dimensions formen part de l’ODS 7.
-    </p>
   </section>
 
   <!-- SECCIÓ 3 -->
   <section>
-    <h2>Les desigualtats territorials: evolució de l’Index ODS7 segons territoris</h2>
-    <p class="lead">
-      El mapa permet analitzar com evoluciona l’Index ODS7 per país al llarg del temps.
-      És especialment útil per identificar concentracions territorials de dèficit i la persistència de desigualtats.
+    <h2>Desigualtats territorials</h2>
+    <p class="chart-subtitle">
+      Evolució de l’Índex ODS 7 per país (2000–2023): identificació de concentracions regionals de dèficit
     </p>
+    <p class="lead">
+      La mitjana mundial pot ocultar patrons territorials. El mapa animat permet observar l’evolució país a país i detectar
+      si els valors baixos es concentren en regions concretes i persisteixen al llarg del temps.
+    </p>
+
+    <div class="narrative">
+      <h3>Lectura</h3>
+      <p>
+        El mapa mostra una distribució desigual del progrés: mentre molts països s’acosten als valors alts de l’índex,
+        els valors més baixos es mantenen <b>concentrats en regions determinades</b>.
+      </p>
+      <p class="insight">
+        <b>Idea clau:</b> el dèficit és especialment persistent a l’<b>Àfrica subsahariana</b>, fet que apunta a barreres estructurals
+        (infraestructura, capacitat d’inversió, accés a solucions modernes de cuina, etc.) i reforça la necessitat d’intervencions focalitzades.
+      </p>
+    </div>
+
     <div class="frame">
       <iframe class="h-mapa" src="visuals/seccio3_mapa_ods7_index_animat.html" loading="lazy"
-              title="Secció 3 — Mapa animat índex ODS7"></iframe>
+              title="Secció 3 — Mapa animat índex ODS 7"></iframe>
     </div>
   </section>
 
   <!-- SECCIÓ 4 -->
   <section>
-    <h2>On ens deixa això?</h2>
-    <p class="lead">
-      A l’últim any de dades disponible, es classifiquen els països segons el seu grau d’assoliment de l’ODS 7.
-      El resultat mostra que una part molt significativa de països continua lluny d’arribar al 100% d’accés,
-      reforçant la necessitat d’accelerar el progrés abans del 2030.
+    <h2>Magnitud del repte el 2023</h2>
+    <p class="chart-subtitle">
+      Classificació de països segons grau d’assoliment a l’últim any disponible (llindar “lluny”: <b>&lt; 90%</b> de cobertura)
     </p>
+    <p class="lead">
+      Per passar de la dinàmica temporal a una fotografia final, es classifiquen els països segons si estan a prop d’assolir
+      l’accés universal o si continuen clarament lluny de l’objectiu.
+    </p>
+
+    <div class="narrative">
+      <h3>Lectura</h3>
+      <p>
+        Definint com a “lluny de l’objectiu” els països amb una cobertura inferior al <b>90%</b> (segons l’índex ODS 7),
+        el resultat mostra que el repte és quantitativament important.
+      </p>
+      <p class="kpi">
+        <b>Any 2023:</b> aproximadament <b>41.8%</b> dels països es mantenen <b>lluny de l’objectiu</b>, mentre que <b>58.2%</b> estan
+        a prop o pràcticament assolits.
+      </p>
+      <p class="insight">
+        <b>Idea clau:</b> no es tracta d’un “tram final” minoritari: una part molt significativa de països requereix una acceleració real
+        per convergir cap al 100% abans del 2030.
+      </p>
+    </div>
+
     <div class="frame">
       <iframe class="h-donut" src="visuals/seccio4_paisos_lluny_ods7.html" loading="lazy"
-              title="Secció 4 — Països lluny ODS7"></iframe>
+              title="Secció 4 — Països lluny de l'ODS 7"></iframe>
     </div>
   </section>
 
   <!-- SECCIÓ 5 -->
   <section>
-    <h2>La relació entre el desenvolupament econòmic i el compliment de l’ODS 7</h2>
+    <h2>ODS 7 i desenvolupament econòmic</h2>
+    <p class="chart-subtitle">
+      Relació entre l’Índex ODS 7 i el PIB per càpita: densitat de països segons renda i assoliment
+    </p>
     <p class="lead">
-      Finalment, es compara el grau de compliment de l’ODS 7 amb el nivell de desenvolupament econòmic dels països,
-      utilitzant el PIB per càpita com a indicador de referència.
-      La visualització mostra la densitat de països segons el seu
-      <b>Índex ODS 7</b> i el seu nivell de renda.</p>
+      Finalment, es contrasta el grau d’assoliment de l’ODS 7 amb el nivell de desenvolupament econòmic, utilitzant el PIB per càpita
+      com a proxy de capacitat d’inversió i accés a infraestructures i tecnologies modernes.
+    </p>
+
+    <div class="narrative">
+      <h3>Lectura</h3>
+      <p>
+        La visualització mostra un patró clar: a mesura que augmenta el <b>PIB per càpita</b>, l’<b>Índex ODS 7</b> tendeix a situar-se
+        en valors més elevats, amb una concentració de països de renda alta a la zona superior (índex proper al 100%).
+      </p>
+      <p class="insight">
+        <b>Idea clau:</b> l’Índex ODS 7 està <b>directament relacionat amb el PIB</b>. Això reforça que el retard no és només tecnològic,
+        sinó també estructural: la renda condiciona la capacitat d’estendre infraestructures, electrificació de qualitat i alternatives de cuina netes i segures.
+      </p>
+    </div>
+
     <div class="frame">
       <iframe class="h-scatter"
               src="visuals/seccio5_ods7_vs_gdp_hexbin.html"
               loading="lazy"
-              title="Secció 5 — Compliment de l’ODS 7 vs PIB per càpita">
+              title="Secció 5 — Índex ODS 7 vs PIB per càpita (hexbin)">
       </iframe>
     </div>
   </section>
@@ -150,6 +292,10 @@
     </div>
     <div>
       <b>Publicació:</b> GitHub Pages · Repositori: annahmarsal / PRACT-visualitzacions
+    </div>
+    <div class="note">
+      Les visualitzacions s’han integrat en un relat únic: cada secció aporta context, lectura i una idea clau vinculada a la pregunta central
+      sobre l’assoliment de l’ODS 7 a 7 anys del 2030.
     </div>
   </footer>
 
