--- a/visuals/seccio2_auditori_mundial.html
+++ b/visuals/seccio2_auditori_mundial.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ODS 7 — Auditori (Índex combinat)</title>
+
+  <!-- Sense títol: el marc narratiu va a index.html -->
+  <title>Secció 2 — Índex ODS 7 (mostra de 100)</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <style>
     :root {
-      --yellow: #F2C94C;
-      --black: #111111;
-      --muted: #666;
-      --bg: #ffffff;
+      --yellow: #F2C200;
+      --gray: #9AA0A6;
+      --grid: #E6E6E6;
+      --text: #333333;
+      --bg: #FFFFFF;
       --maxw: 860px;
     }
 
@@ -21,8 +24,8 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: var(--bg);
       margin: 0;
-      padding: 28px 18px;
-      color: #111;
+      padding: 18px;
+      color: var(--text);
     }
 
     .wrap {
@@ -30,34 +33,18 @@
       margin: 0 auto;
     }
 
-    h1 {
-      font-size: 26px;
-      margin: 0 0 6px 0;
-      line-height: 1.25;
-    }
-
-    .subtitle {
-      margin: 0 0 18px 0;
-      color: var(--muted);
-      font-size: 15px;
-    }
-
     .card {
-      border: 1px solid #eee;
+      border: 1px solid var(--grid);
       border-radius: 14px;
-      padding: 18px 18px 16px 18px;
-      box-shadow: 0 1px 0 rgba(0,0,0,0.04);
-    }
-
-    .card h2 {
-      font-size: 18px;
-      margin: 0 0 6px 0;
+      padding: 16px 16px 14px 16px;
+      background: #fff;
     }
 
     .meta {
       font-size: 14px;
-      color: var(--muted);
+      color: #555;
       margin: 0 0 14px 0;
+      line-height: 1.45;
     }
 
     .grid {
@@ -79,14 +66,13 @@
     }
 
     .off {
-      color: var(--black);
-      opacity: 0.95;
+      color: var(--gray);
     }
 
     .legend {
       margin-top: 14px;
       font-size: 13px;
-      color: var(--muted);
+      color: #555;
       display: flex;
       gap: 14px;
       align-items: center;
@@ -103,131 +89,142 @@
     }
 
     .dot.yellow { background: var(--yellow); }
-    .dot.black { background: var(--black); }
+    .dot.gray { background: var(--gray); }
+
+    /* Accessibilitat bàsica */
+    .sr-only {
+      position:absolute;
+      width:1px;
+      height:1px;
+      padding:0;
+      margin:-1px;
+      overflow:hidden;
+      clip:rect(0,0,0,0);
+      white-space:nowrap;
+      border:0;
+    }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <h1>ODS 7 — Què vol dir “accés universal” avui? (mostra de 100)</h1>
-    <p class="subtitle">
-      Situació mundial l’any <b>2023</b>. L’índex combina electricitat i cuina neta:
-      <b>ODS7_index = (Electricitat + Cuina neta) / 2</b>.
-    </p>
-
     <div class="card">
-      <h2>Índex combinat ODS 7</h2>
       <p class="meta">
-        Electricitat: <b>91.6%</b> · Cuina neta: <b>74.1%</b> ·
-        ODS7_index: <b>82.9%</b> (≈ <b>83</b> de 100 amb accés integral)
+        <b>Any 2023</b> · Electricitat: <b>91.6%</b> ·
+        Combustibles/tecnologies netes (cuina): <b>74.1%</b> ·
+        <b>Índex ODS 7 (%): 82.9%</b> (≈ <b>83</b> de 100)
       </p>
 
+      <span class="sr-only">
+        Mostra de 100 icones: 83 en groc (cobert) i 17 en gris (pendent).
+      </span>
+
       <div class="grid">
-        <i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person on"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
-<i class="fa-solid fa-person off"></i>
+        <i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person on" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
+<i class="fa-solid fa-person off" aria-hidden="true"></i>
       </div>
 
       <div class="legend">
-        <span><span class="dot yellow"></span>Proporció amb accés (ODS7_index)</span>
-        <span><span class="dot black"></span>Proporció sense accés (bretxa fins al 100%)</span>
+        <span><span class="dot yellow"></span>Cobert (Índex ODS 7)</span>
+        <span><span class="dot gray"></span>Pendent (fins al 100%)</span>
       </div>
     </div>
   </div>
